# twitch-irc-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/: FUNDING.yml  pull_request_template.md
.github/workflows/: cargo-audit.yml  changelog-check.yml  rust.yml
examples/: grafana-dashboard.json  metrics.rs  simple_listener.rs
src/: config.rs  error.rs  lib.rs  login.rs  main.rs  metrics.rs  mod.rs  task.rs  validate.rs
src/client/: config.rs  connection.rs  event_loop.rs  mod.rs  operations.rs  pool.rs  pool_connection.rs  transport.rs
src/client/transport/: message_stream.rs  mod.rs  tcp.rs  transport_error.rs  ws.rs
src/connection/: error.rs  event_loop.rs  incoming.rs  main_loop.rs  mod.rs
src/message/: mod.rs  prefix.rs  tags.rs  twitch.rs
src/message/commands/: clearchat.rs  clearmsg.rs  globaluserstate.rs  hosttarget.rs  join.rs  mod.rs  notice.rs  part.rs  ping.rs  pong.rs  privmsg.rs  reconnect.rs  roomstate.rs  usernotice.rs  userstate.rs  whisper.rs
src/transport/: mod.rs  tcp.rs  websocket.rs
src/util/: mod.rs  rentals.rs
