[package]
name = "twitch-irc"
description = "Connect to Twitch chat from a Rust application."
license = "MIT"
version = "3.0.0"
authors = ["Ruben Anders <ruben.anders@robotty.de>"]
repository = "https://github.com/robotty/twitch-irc-rs"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# https://docs.rs/about/metadata
[package.metadata.docs.rs]
# If updating this make sure to update workflows/rust.yml too
features = [
    "refreshing-token",
    "transport-tcp",
    "transport-tcp-rustls-webpki-roots",
    "transport-ws",
    "transport-ws-rustls-webpki-roots",
    "metrics-collection",
    "with-serde"
]
no-default-features = true

[dependencies]
async-trait = "0.1.42"
async-tungstenite = { version = "0.13", features = ["tokio-runtime"], optional = true }
bytes = { version = "1.0", optional = true }
chrono = "0.4.19"
enum_dispatch = "0.3.5"
futures-util = { version = "0.3.12", default-features = false, features = ["async-await", "sink", "std"] }
itertools = "0.10.0"
log = "0.4.13"
metrics = { version = "0.16", optional = true }
reqwest = { version = "0.11", features = ["json"], optional = true }
rustls-native-certs = { version = "0.5", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
smallvec = "1.6.1"
thiserror = "1.0.23"
tokio = { version = "1.0", features = ["rt", "time", "sync", "macros"] }
tokio-native-tls = { version = "0.3", optional = true }
tokio-rustls = { version = "0.22", optional = true }
tokio-stream = { version = "0.1", features = ["io-util"], optional = true }
tokio-util = { version = "0.6", features = ["codec"], optional = true }
webpki-roots = { version = "0.21", optional = true }

[dev-dependencies]
env_logger = "0.8.2"
maplit = "1.0.2"
serde_json = "1.0"
tokio = { version = "1.0", features = ["rt-multi-thread"] }

[lib]
name = "twitch_irc"
path = "src/lib.rs"

[[example]]
name = "simple_listener"
#required-features = ["transport-tcp", "transport-tcp-native-tls"]

[features]
# If you add a feature here don't forget to add it to the test workflow in workflows/rust.yml!
default = ["transport-tcp", "transport-tcp-native-tls"]
refreshing-token = ["reqwest", "with-serde"]
transport-tcp = ["bytes", "tokio/net", "tokio/io-util", "tokio-util", "tokio-stream"]
transport-tcp-native-tls = ["transport-tcp", "tokio-native-tls"]
transport-tcp-rustls-native-roots = ["transport-tcp", "tokio-rustls", "rustls-native-certs"]
transport-tcp-rustls-webpki-roots = ["transport-tcp", "tokio-rustls", "webpki-roots"]
transport-ws = ["async-tungstenite", "tokio-util"]
transport-ws-native-tls = ["transport-ws", "async-tungstenite/tokio-native-tls"]
transport-ws-rustls-webpki-roots = ["transport-ws", "async-tungstenite/tokio-rustls"]
metrics-collection = ["metrics"]
with-serde = ["serde", "chrono/serde"]
