[package]
name = "twitch-irc"
description = "Connect to Twitch chat from a Rust application."
license = "MIT"
version = "3.0.1"
authors = ["Ruben Anders <ruben.anders@robotty.de>"]
keywords = ["twitch", "twitch-irc", "twitch-api"]
categories = ["api-bindings", "asynchronous", "network-programming", "parser-implementations"]
repository = "https://github.com/robotty/twitch-irc-rs"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# https://docs.rs/about/metadata
[package.metadata.docs.rs]
# If updating this make sure to update workflows/rust.yml too
features = [
    "refreshing-token",
    "transport-tcp",
    "transport-tcp-rustls-webpki-roots",
    "transport-ws",
    "transport-ws-rustls-webpki-roots",
    "metrics-collection",
    "with-serde"
]
no-default-features = true

[dependencies]
async-trait = "0.1"
async-tungstenite = { version = "0.16", features = ["tokio-runtime"], optional = true }
bytes = { version = "1", optional = true }
chrono = "0.4"
enum_dispatch = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["async-await", "sink", "std"] }
itertools = "0.10"
log = "0.4"
metrics = { version = "0.18", optional = true }
reqwest = { version = "0.11", features = ["json"], optional = true }
rustls-native-certs = { version = "0.6", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
smallvec = "1"
thiserror = "1"
tokio = { version = "1", features = ["rt", "time", "sync", "macros"] }
tokio-native-tls = { version = "0.3", optional = true }
tokio-rustls = { version = "0.23", optional = true }
tokio-stream = { version = "0.1", features = ["io-util"], optional = true }
tokio-util = { version = "0.6", features = ["codec"], optional = true }
webpki-roots = { version = "0.22", optional = true }

[dev-dependencies]
env_logger = "0.9"
maplit = "1"
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread"] }

[lib]
name = "twitch_irc"
path = "src/lib.rs"

[[example]]
name = "simple_listener"
#required-features = ["transport-tcp", "transport-tcp-native-tls"]

[features]
# If you add a feature here don't forget to add it to the test workflow in workflows/rust.yml!
default = ["transport-tcp", "transport-tcp-native-tls"]
refreshing-token = ["reqwest", "with-serde"]
transport-tcp = ["bytes", "tokio/net", "tokio/io-util", "tokio-util", "tokio-stream"]
transport-tcp-native-tls = ["transport-tcp", "tokio-native-tls"]
transport-tcp-rustls-native-roots = ["transport-tcp", "tokio-rustls", "rustls-native-certs"]
transport-tcp-rustls-webpki-roots = ["transport-tcp", "tokio-rustls", "webpki-roots"]
transport-ws = ["async-tungstenite", "tokio-util"]
transport-ws-native-tls = ["transport-ws", "async-tungstenite/tokio-native-tls"]
transport-ws-rustls-native-roots = ["transport-ws", "async-tungstenite/tokio-rustls-native-certs"]
transport-ws-rustls-webpki-roots = ["transport-ws", "async-tungstenite/tokio-rustls-webpki-roots"]
metrics-collection = ["metrics"]
with-serde = ["serde", "chrono/serde"]
